# CSC305

./: .gitignore  CMakeLists.txt  README.md
animation2d/: CMakeLists.txt  fb_fshader.glsl  main.cpp  report.md
animation2d/Rendering/: renderer.cpp  renderer.h
animation2d/Shaders/: fb_fshader.glsl  fb_vshader.glsl  line_fshader.glsl  line_vshader.glsl  quad_fshader.glsl  quad_vshader.glsl  selection_fshader.glsl
assignment2/: CMakeLists.txt  cone_generator.cpp  cube_generator.cpp  cube_generator.h  cylinder_generator.cpp  cylinder_generator.h  main.cpp  mesh_generator.cpp  mesh_generator.h  pyramid_generator.cpp  renderer.cpp  renderer.h  report.md  sphere_generator.cpp  sphere_generator.h
assignment2/Mesh/: Mesh.cpp  Mesh.h  mesh.cpp  mesh.h
assignment2/MeshGenerators/: cone_generator.cpp  cone_generator.h  cube_generator.cpp  cube_generator.h  cylinder_generator.cpp  cylinder_generator.h  mesh_generator.cpp  mesh_generator.h  pyramid_generator.cpp  pyramid_generator.h  sphere_generator.cpp  sphere_generator.h
assignment2/Renderer/: renderer.cpp  renderer.h
assignment2/Rendering/: mesh.cpp  mesh.h  renderer.cpp  renderer.h
assignment2/Shaders/: fragment_shader.glsl  vertex_shader.glsl
assignment2/shaders/: fragment_shader.glsl  vertex_shader.glsl
assignment4/: CMakeLists.txt  main.cpp  report.md
assignment4/Noise/: noise.cpp  noise.h
assignment4/Rendering/: renderer.cpp  renderer.h
assignment4/Shaders/: skybox_vshader.glsl  terrain_fshader.glsl  terrain_vshader.glsl
assignment4/Texture/: texture.cpp  texture.h
raytrace/: CMakeLists.txt  Light.cpp  Light.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Surface.h  colors.cpp  colors.h  light.cpp  light.h  main.cpp  material.cpp  material.h  plane.cpp  plane.h  raytracer.cpp  raytracer.h  report.md  sphere.cpp  sphere.h  surface.cpp  surface.h
